      of sessions to track calendar selections by default;  you can re-enable
      them by visiting the 'portal_calendar' tool in the ZMI.

    - Updated FS-based skin methods to read optional '.security files,
      whcih control the role-permission mappings for each skin method.
      See CMFCore/tests/fake_skins/fake_skin/test4.py.security for an
      example.

  Bugs Fixed

    - Fixed PortalFolder's filtering so that it correctly restricts
      itself to the portal types allowed by the TypesTool (Tracker #483).

    - Fixed the TypesTool so that TypeInformation's Title is
      decorrelated from its Id (the old TypeInformation.Type() should
      not be used anymore). The Id is what gets put in the "portal_type"
      attribute of a content object, which one gets at using
      somecontent.getPortalTypeName(). The Title is returned by
      somecontent.Type(). "portal_type" is now indexed, and in most
      cases should be used when doing catalog queries instead of "Type".

    - Provided all default skins (content_hide_form, content_show_form)
      for the DCWorkflow default workflow [rev 2]. Note that, when using
      this workflow, the descriptions in the retract and reject forms
      are slightly incorrect as they mention the "private" state but in
      fact go to the "visible" state.

    - Fixed verification of portal types in the TypesTool to work in the
      presence of portal types with a non-empty title (Tracker #497).

    - Removed unintentional sharing of ActionInformation data between
      class defaults and persistent instances derived from
      ActionProviderBase.  Likewise for TypeInformation instances.

    - Enabled creation of "My Stuff" folder for users (e.g., the manager)
      authenticated "above" the normal user folder (Tracker #485, thanks
      to Dieter Maurer for the patch).

    - Fixed handling of discussion items so that they are correctly
      indexed, unindexed and reinserted into the workflows when copied